# cpp-project-template

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  configure.bat  configure.sh  example.cpp  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
docker/: linux.Dockerfile
docs/: BUILDING.md
include/Project/: ProjectLib.hpp
include/ProjectLib/: ProjectLib.hpp
include/project/: projectLib.hpp
src/CPT/App/: app.cpp
src/ProjectApp/: ProjectApp.cpp
src/ProjectLib/: ProjectLib.cpp  projectLib.cpp
src/ProjectPCH/: StandardLibrary.cpp  StandardLibrary.hpp
src/project/App/: projectApp.cpp
tests/FuzzTests/: FuzzTestsMain.cpp
tests/MainTests/: MainTests.cpp
tests/PerfTests/: PerfTestsMain.cpp
tests/SetupTests/docker/: linux.Dockerfile
tests/SetupTests/scripts/: testSetup.sh
tests/UnitTests/: UnitTestsMain.cpp
tools/BuildTools/: dependencies.py  setup.py  utils.py
tools/BuildTools/cmake/Modules/: BuildToolsMain.cmake  CCache.cmake  CMakeProjectInclude.cmake  CMakeProjectIncludeBefore.cmake  CPM.cmake  CodeCoverage.cmake  CompilerWarnings.cmake  Doxygen.cmake  FetchAndInstall.cmake  FetchCatch.cmake  FetchGSL.cmake  FetchGTest.cmake  Filesystem.cmake  HostSystemInformation.cmake  Linker.cmake  Logger.cmake  PreCompiledHeaders.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
tools/BuildTools/cmake/Templates/: IncludeMeta.cmake  Meta.h.in
tools/BuildTools/scripts/: dependencies.py  setup.py  utils.py
tools/GitTools/Hooks/: applypatch-msg  commit-msg  fsmonitor-watchman  post-update  pre-applypatch  pre-commit  pre-merge-commit  pre-push  pre-rebase  pre-receive  prepare-commit-msg  push-to-checkout  sendemail-validate  update
tools/GitTools/Utils/: logger.sh  runTests.sh  utilities.sh
tools/scripts/: setup.py  utils.py
